Small refactoring in integrstion tests